// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUser should create a user with first name and last name only 1`] = `
{
  "email": "",
  "firstName": "John",
  "lastName": "Doe",
  "password": "password",
  "phone": "",
  "type": "USER",
}
`;

exports[`CreateUser should create a user with first name, last name and email 1`] = `
{
  "email": "john.doe@example.com",
  "firstName": "John",
  "lastName": "Doe",
  "password": "password",
  "phone": "",
  "type": "USER",
}
`;

exports[`CreateUser should create a user with first name, last name and phone 1`] = `
{
  "email": "",
  "firstName": "Anton",
  "lastName": "Doe",
  "password": "password",
  "phone": "1234567890",
  "type": "USER",
}
`;
